--- a/Trocomatic.Core/Trocomatic.Core.csproj
+++ b/Trocomatic.Core/Trocomatic.Core.csproj
@@ -39,10 +39,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DataContracts\AbstractMoneyFactory.cs" />
     <Compile Include="DataContracts\AbstractRequest.cs" />
-    <Compile Include="DataContracts\Coin.cs" />
+    <Compile Include="DataContracts\ChangeDetails.cs" />
     <Compile Include="DataContracts\GetChangeRequest.cs" />
     <Compile Include="DataContracts\GetChangeResponse.cs" />
+    <Compile Include="DataContracts\Money.cs" />
     <Compile Include="Messages.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
