--- a/Trocomatic.Core/Trocomatic.Core.csproj
+++ b/Trocomatic.Core/Trocomatic.Core.csproj
@@ -39,12 +39,18 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="DataContracts\AbstractMoneyFactory.cs" />
+    <Compile Include="CandyChangeProcessor.cs" />
+    <Compile Include="SilverChangeProcessor.cs" />
+    <Compile Include="CoinChangeProcessor.cs" />
+    <Compile Include="BillChangeProcessor.cs" />
     <Compile Include="DataContracts\AbstractRequest.cs" />
+    <Compile Include="DataContracts\Bill.cs" />
     <Compile Include="DataContracts\ChangeDetails.cs" />
     <Compile Include="DataContracts\GetChangeRequest.cs" />
     <Compile Include="DataContracts\GetChangeResponse.cs" />
     <Compile Include="DataContracts\Money.cs" />
+    <Compile Include="IChangeProcessor.cs" />
+    <Compile Include="IChangeProcessorFactory.cs" />
     <Compile Include="Messages.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
