--- a/Trocomatic.Infrastructure/Trocomatic.Infrastructure.csproj
+++ b/Trocomatic.Infrastructure/Trocomatic.Infrastructure.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{34A7C825-D418-47A1-88F8-2E8306C5624D}</ProjectGuid>
+    <ProjectGuid>{05F4C8F1-67FB-408B-8CB4-31EC3A6879CC}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Trocomatic.Core</RootNamespace>
-    <AssemblyName>Trocomatic.Core</AssemblyName>
+    <RootNamespace>Trocomatic.Infrastructure</RootNamespace>
+    <AssemblyName>Trocomatic.Infrastructure</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -30,8 +30,13 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Dlp.Framework">
+      <HintPath>..\packages\Dlp.Framework.dll.0.8.9\lib\net45\Dlp.Framework.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
+    <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -39,39 +44,16 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="CandyChangeProcessor.cs" />
-    <Compile Include="GoldChangeProcessor.cs" />
-    <Compile Include="SilverChangeProcessor.cs" />
-    <Compile Include="CoinChangeProcessor.cs" />
-    <Compile Include="BillChangeProcessor.cs" />
-    <Compile Include="DataContracts\AbstractRequest.cs" />
-    <Compile Include="DataContracts\Bill.cs" />
-    <Compile Include="DataContracts\ChangeDetails.cs" />
-    <Compile Include="DataContracts\GetChangeRequest.cs" />
-    <Compile Include="DataContracts\GetChangeResponse.cs" />
-    <Compile Include="DataContracts\Money.cs" />
-    <Compile Include="IChangeProcessor.cs" />
-    <Compile Include="IChangeProcessorFactory.cs" />
-    <Compile Include="Messages.Designer.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>Messages.resx</DependentUpon>
-    </Compile>
-    <Compile Include="DataContracts\OperationReport.cs" />
-    <Compile Include="TrocomaticManager.cs" />
+    <Compile Include="AbstractLogger.cs" />
+    <Compile Include="EventLogger.cs" />
+    <Compile Include="FileLogger.cs" />
+    <Compile Include="ILogger.cs" />
+    <Compile Include="LoggerFactory.cs" />
+    <Compile Include="LogRecord.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Messages.resx">
-      <Generator>PublicResXFileCodeGenerator</Generator>
-      <LastGenOutput>Messages.Designer.cs</LastGenOutput>
-    </EmbeddedResource>
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\Trocomatic.Infrastructure\Trocomatic.Infrastructure.csproj">
-      <Project>{05f4c8f1-67fb-408b-8cb4-31ec3a6879cc}</Project>
-      <Name>Trocomatic.Infrastructure</Name>
-    </ProjectReference>
+    <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
