--- a/Trocomatic/App.config
+++ b/Trocomatic/App.config
@@ -3,4 +3,8 @@
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
     </startup>
+	<appSettings>
+		<!-- Log Target: File or EventViewer -->
+		<add key="LogType" value="EventViewer"/>
+	</appSettings>
 </configuration>
