--- a/Trocomatic.Core.Tests/Trocomatic.Core.Tests.csproj
+++ b/Trocomatic.Core.Tests/Trocomatic.Core.Tests.csproj
@@ -35,7 +35,12 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Dlp.Framework, Version=0.1.5877.31277, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\packages\Dlp.Framework.dll.0.8.9\lib\net45\Dlp.Framework.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
+    <Reference Include="System.Runtime.Serialization" />
   </ItemGroup>
   <Choose>
     <When Condition="('$(VisualStudioVersion)' == '10.0' or '$(VisualStudioVersion)' == '') and '$(TargetFrameworkVersion)' == 'v3.5'">
@@ -50,6 +55,7 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
+    <Compile Include="FileLoggerMock.cs" />
     <Compile Include="TrocomaticManagerTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -58,6 +64,13 @@
       <Project>{34a7c825-d418-47a1-88f8-2e8306c5624d}</Project>
       <Name>Trocomatic.Core</Name>
     </ProjectReference>
+    <ProjectReference Include="..\Trocomatic.Infrastructure\Trocomatic.Infrastructure.csproj">
+      <Project>{05f4c8f1-67fb-408b-8cb4-31ec3a6879cc}</Project>
+      <Name>Trocomatic.Infrastructure</Name>
+    </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="packages.config" />
   </ItemGroup>
   <Choose>
     <When Condition="'$(VisualStudioVersion)' == '10.0' And '$(IsCodedUITest)' == 'True'">
